--- a/src/containers/Projects/styles.css
+++ b/src/containers/Projects/styles.css
@@ -7,6 +7,19 @@
 .card-row {
     overflow-x: scroll;
 }
+
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+}
+
+.spinner-border.spinner-lg {
+    width: 100px;
+    height: 100px;
+    border-width: 0.5em;
+}
   
 @media screen and (max-width: 992px) {
     .card-row::-webkit-scrollbar {
