update scrollbar styles for desktop

--- a/src/containers/Projects/styles.css
+++ b/src/containers/Projects/styles.css
@@ -39,5 +39,8 @@
     border-width: 0.5em;
 }
   
-@media screen and (max-width: 992px) {
+@media screen and (min-width: 992px) {
+    .scroller::-webkit-scrollbar {
+        display: none;
+    }
 }
